--- a/public/app/purchase.html
+++ b/public/app/purchase.html
@@ -7,6 +7,7 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src='common/buy.js'></script>
     <script src='common/jquery-2.1.1.min.js'></script>
+    <script src='util.js'></script>
     <script src='purchase.js'></script>
     <style>
     .blue-icon {
