app and license

--- a/public/index.html
+++ b/public/index.html
@@ -599,6 +599,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
           <!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li> -->
 				</ul>
 				<p class="copyright">&copy; ClockworkMod. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
+				<p><a href="VysorLicense.pdf">Software License</a></p>
 			</footer>
 
 		<!-- Scripts -->
