--- a/public/app/list.html
+++ b/public/app/list.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div id='site-wrapper'>
-      <div class="modal fade"  id="myModal" tabindex="-1" role="dialog">
+      <div class="modal fade"  id="notificationModal" tabindex="-1" role="dialog">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
@@ -47,6 +47,29 @@
         </div><!-- /.modal-dialog -->
       </div><!-- /.modal -->
 
+      <div class="modal fade"  id="connectModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title">Connect to Network Device (adb connect)</h4>
+            </div>
+            <div class="modal-body">
+              <div class="input-group">
+                <span class="input-group-addon" id="basic-addon1">IP Address of Android Device</span>
+                <input type="text" class="form-control" placeholder="192.168.1.100" aria-describedby="basic-addon1" id='connect-address'>
+              </div>
+              
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal" id='connect-cancel'>Cancel</button>
+              <button type="button" class="btn btn-primary" id='connect-ok'>Connect</button>
+            </div>
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
+
+
       <h5 id='choose-header' class='list-header'>
         Choose a device
       </h5>
@@ -54,6 +77,9 @@
       <p class="lead" id='find'>
         <a href="#" class="btn btn-lg btn-default" id='connect-android' name="connect-android">Find Devices</a>
       </p>
+      <div>
+        <a href='#' id='connect-network' title='Connect to Network Device' class='btn btn-xs btn-default fa fa-link'></a>
+      </div>
       <div id='farms-list'>
       </div>
       <h5>
@@ -62,7 +88,7 @@
       <div class='well'>
         <form class='form-horizontal'>
           <div class='form-group'>
-            <label class='col-sm-3 control-label'>Image Quality</label>
+            <label class='col-sm-4 control-label'>Image Quality</label>
             <div class='col-sm-6'>
               <select class="form-control" style='' id='bitrate'>
                 <option>
@@ -84,19 +110,19 @@
             </div>
           </div>
           <div id='vysor-keyboard' class='form-group'>
-            <label class='col-sm-3 control-label'>Vysor Keyboard (IME)</label>
+            <label class='col-sm-4 control-label'>International Keyboard</label>
             <div class='col-sm-6 checkbox'>
               <input type="checkbox" name="vysor-keyboard" value="1" id='vysor-keyboard-check'>
             </div>
           </div>
           <div id='share-all' class='form-group'>
-            <label class='col-sm-3 control-label'>Share All Devices</label>
+            <label class='col-sm-4 control-label'>Share All Devices</label>
             <div class='col-sm-6 checkbox'>
               <input type="checkbox" name="share-all" value="1" id='share-all-check'>
             </div>
           </div>
           <div id='connect-automatically' class='form-group'>
-            <label class='col-sm-3 control-label'>Start automatically</label>
+            <label class='col-sm-4 control-label'>Start automatically</label>
             <div class='col-sm-6 checkbox'>
               <input type="checkbox" name="connect-automatically" value="1" id='connect-automatically-check'>
             </div>
@@ -135,7 +161,9 @@
       <div class="navbar navbar-default navbar-fixed-bottom">
         <div class="container-fluid">
           <div class="navbar-header">
-            <p class="navbar-text"><a href="http://twitter.com/vysorapp" target="_blank">@vysorapp</a><span> by </span><a href="http://www.clockworkmod.com/" target="_blank">ClockworkMod</a></p>
+            <p class="navbar-text"><a href="http://www.clockworkmod.com/" target="_blank"><i class='fa fa-home'></i></a></p>
+            <p class="navbar-text"><a href="http://twitter.com/vysorapp" target="_blank"><i class='fa fa-twitter'></i></a></p>
+            <a class="navbar-text" href="http://dev.vysor.io/" target='_blank'>Developers</a>
             <a class="navbar-text" href="https://plus.google.com/110558071969009568835/posts/1uS4nfW7xhp" target='_blank'>Support</a>
             <a id='tutorial' class="navbar-text" href="#">Tutorial</a>
             <a id='reload-vysor' class="navbar-text" href='#' name="reload-vysor">Reload Vysor</a>
