--- a/public/app/purchase.html
+++ b/public/app/purchase.html
@@ -9,6 +9,7 @@
     <script src='common/jquery-2.1.1.min.js'></script>
     <script src='util.js'></script>
     <script src='purchase.js'></script>
+    <script src='uglify-purchase.js'></script>
     <style>
     .blue-icon {
       color: #4A98E5;
