--- a/public/app/list.html
+++ b/public/app/list.html
@@ -238,6 +238,7 @@
             <p class="navbar-text"><a href="http://twitter.com/vysorapp" target="_blank"><i class='fa fa-twitter'></i></a></p>
             <a class="navbar-text" href="http://dev.vysor.io/" target='_blank'>Developers</a>
             <a class="navbar-text" href="https://plus.google.com/110558071969009568835/posts/1uS4nfW7xhp" target='_blank'>Support</a>
+            <a class="navbar-text" href="#" id='bugreport'>Bug Report</a>
             <a id='tutorial' class="navbar-text" href="#">Tutorial</a>
             <a id='reload-vysor' class="navbar-text" href='#' name="reload-vysor">Reload Vysor</a>
           </div>
