--- a/public/app/screen.html
+++ b/public/app/screen.html
@@ -138,6 +138,7 @@
     </style>
     <script src='common/jquery-2.1.1.min.js'></script>
     <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+
     <script src='util.js'></script>
     <script src='socket/socket.js'></script>
     <script src='socket/fetch.js'></script>
@@ -275,7 +276,7 @@
       <span class='topbuttonbar'>
         <span class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
           <span class="btn-group btn-group-xs" role="group" aria-label="First group">
-            <a id='settings-button' type="button" class="btn btn-default" title="Open Main Vysor Window"><span class='fa fa-gear'></span></a>
+            <a id='settings-button' type="button" class="btn btn-default" title="Open Device Settings"><span class='fa fa-gear'></span></a>
             <!-- <a id='pin-title-button' type="button" class="btn btn-default" title="Toggle Pin Title Menu"><span class='fa fa-thumb-tack'></span></a>
             <a id='fullscreen-button' type="button" class="btn btn-default" title="Full Screen"><span class='fa fa-arrows-alt'></span></a>
             <a id='softkey-button' type="button" class="btn btn-default" title="Toggle Soft Input Panel"><span class='fa fa-keyboard-o'></span></a> -->
