--- a/public/app/purchase.html
+++ b/public/app/purchase.html
@@ -35,6 +35,12 @@
     .time-highlight {
       color: red;
     }
+    td {
+      font-size: 14px;
+    }
+    html, body {
+        overflow-y: visible;
+    }
     </style>
   </head>
   <body>
