--- a/public/app/screen.html
+++ b/public/app/screen.html
@@ -15,6 +15,7 @@
         margin: 0;
         height: 100%;
         width: 100%;
+        overflow: hidden;
       }
       canvas {
         position: absolute;
