--- a/public/app/list.html
+++ b/public/app/list.html
@@ -210,7 +210,7 @@
           <p>
             <a id='used' name="used"></a>
           </p>
-          <img src='cards.png' style="max-height: 40px;"></img>
+          <img src='payment/cards.png' style="max-height: 40px;"></img>
         </div>
         <div id='login-container'>
           <p id='login-line'>
