--- a/public/purchase/index.html
+++ b/public/purchase/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<script src='/protocolcheck.js'></script>
 	</head>
 	<body id="top">
 
@@ -43,13 +44,18 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-    
+
       <script>
         $(document).ready(function() {
           if (window.location.toString().indexOf('purchase-complete') == -1) {
             // after a second, redirect to trigger vysor
             setTimeout(function() {
-              window.location = window.location.toString().replace('/purchase/', '/purchase-complete/');
+              var newLocation = window.location.toString().replace('/purchase/', '/purchase-complete/');
+							var customProtocol = 'ec-gidgenkbbabolejbgbpnhbimgjbffefm';
+							var customLocation = newLocation.replace('https', customProtocol).replace('http', customProtocol);
+							protocolCheck(customLocation, function() {
+								window.location = newLocation;
+							})
 
               // still here? vysor is installed!
               setTimeout(function() {
