--- a/public/app/list.html
+++ b/public/app/list.html
@@ -221,7 +221,7 @@
           </p>
         </div>
         <p id='not-found'>
-          Android not found? Make sure <a href='https://www.youtube.com/watch?v=Ucs34BkfPB0&amp;feature=youtu.be' target='_blank'>Android USB Debugging is enabled</a>.
+          Android not found? Make sure <a href='https://plus.google.com/110558071969009568835/posts/Bb2wMXVwsQ7' target='_blank'>Android USB Debugging is enabled</a>.
         </p>
         <p id='windows'>
           Windows users need <a href='http://koush.com/post/universal-adb-driver' target='_blank'>ADB Drivers</a>.
