--- a/public/app/list.html
+++ b/public/app/list.html
@@ -242,6 +242,7 @@
             <a class="navbar-text" href="#" id='bugreport'>Bug Report</a>
             <a id='tutorial' class="navbar-text" href="#">Tutorial</a>
             <a id='reload-vysor' class="navbar-text" href='#' name="reload-vysor">Reload Vysor</a>
+            <a id='reset-vysor' class="navbar-text" href='#' name="reload-vysor">Reset Vysor</a>
           </div>
         </div>
       </div>
