--- a/public/app/purchase.html
+++ b/public/app/purchase.html
@@ -173,23 +173,24 @@
             <h4 class="modal-title">Checkout</h4>
           </div>
           <div class="modal-body">
+            <div>License Account: <span id='purchase-email'></span>.<br/><a href="https://plus.google.com/110558071969009568835/posts/5dWULG7ALmB" target="_blank">Wrong account? Read this.</a><br/><br/></div>
             <center>
-            <div>
-              <a id='pay-google' href='#'><img src='payment/google.png' class='payment-img' /></a>
-            </div>
+              <div>
+                <a id='pay-google' href='#'><img src='payment/google.png' class='payment-img' /></a>
+              </div>
 
-            <div>
-              <a id='pay-paypal' href='#'><img src='payment/paypal.png' class='payment-img' /></a>
-            </div>
+              <div>
+                <a id='pay-paypal' href='#'><img src='payment/paypal.png' class='payment-img' /></a>
+              </div>
 
-            <div>
-              <a id='pay-card' href='#'><img src='payment/card.png' class='payment-img' /></a>
-            </div>
+              <div>
+                <a id='pay-card' href='#'><img src='payment/card.png' class='payment-img' /></a>
+              </div>
 
-            <div>
-              <a id='pay-alipay' href='#'><img src='payment/alipay.png' class='payment-img' /></a>
-            </div>
-          </center>
+              <div>
+                <a id='pay-alipay' href='#'><img src='payment/alipay.png' class='payment-img' /></a>
+              </div>
+            </center>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
