--- a/public/app/purchase.html
+++ b/public/app/purchase.html
@@ -175,14 +175,7 @@
           <div class="modal-body">
             <div>License Account: <span id='purchase-email'></span>.<br/><a href="https://plus.google.com/110558071969009568835/posts/5dWULG7ALmB" target="_blank">Wrong account? Read this.</a><br/><br/></div>
             <center>
-              <div>
-                <a id='pay-google' href='#'><img src='payment/google.png' class='payment-img' /></a>
-              </div>
-
-              <div>
-                <a id='pay-paypal' href='#'><img src='payment/paypal.png' class='payment-img' /></a>
-              </div>
-
+              <p><b>Preferred Checkout</b></p>
               <div>
                 <a id='pay-card' href='#'><img src='payment/card.png' class='payment-img' /></a>
               </div>
@@ -190,7 +183,20 @@
               <div>
                 <a id='pay-alipay' href='#'><img src='payment/alipay.png' class='payment-img' /></a>
               </div>
+
+              <br/>
+              <p><b>Alternate Checkout</b></p>
+              <div>
+                <a id='pay-google' href='#'><img src='payment/google.png' class='payment-img' /></a>
+              </div>
+
+              <div>
+                <a id='pay-paypal' href='#'><img src='payment/paypal.png' class='payment-img' /></a>
+              </div>
             </center>
+            <br/>
+            <br/>
+            <p>Preferred Checkout is powered by <a href='https://www.stripe.com' target='_blank'>Stripe</a>: secure payments, easy to manage subscription, and hassle free. Any order issues can be quickly resolved. This option is highly recommended.</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
@@ -222,7 +228,7 @@
             <h3 class='plan-header'>Annual</h3>
             <span class='plan-price'>
               <span class='currency'>$</span>10
-              <span class="plan-price-details">7 day free trial<br>with credit card<br/>purchase</span>
+              <!-- <span class="plan-price-details">7 day free trial<br>with credit card<br/>purchase</span> -->
             </span>
           </div>
         </div>
