--- a/public/app/list.html
+++ b/public/app/list.html
@@ -228,7 +228,7 @@
           <p>
             <a class='purchase' id='used' name="used"></a>
           </p>
-          <img class='purchase' src='payment/cards.png' style="max-height: 40px;"></img>
+          <p><img class='purchase' src='payment/cards.png' style="max-height: 40px;"></img></p>
         </div>
         <div id='login-container'>
           <p id='login-line'>
