--- a/public/app/screen.html
+++ b/public/app/screen.html
@@ -237,7 +237,7 @@
               <div id='display-settings-container'>
                 <label>Display Settings</label>
                 <div class='well'>
-                  <label>Size</label>
+                  <label>Size and Density</label>
                   <select id='display-settings' class="form-control">
                   </select>
 
