--- a/public/app/list.html
+++ b/public/app/list.html
@@ -112,19 +112,24 @@
                       <option>Hardware</option>
                       <option>Hardware with fallback</option>
                     </select>
+                  </div>
+                </div>
 
-                    <br/>
-                    <label>Display Settings</label>
+                <div id='display-settings-container'>
+                  <label>Display Settings</label>
+                  <div class='well'>
+                    <label>Size and Density</label>
                     <select id='display-settings' class="form-control">
                     </select>
 
                     <div class="checkbox">
                       <label>
-                        <input id='reset-display-settings' type="checkbox"> Reset Display Settings on Exit
+                        <input id='dim-display' type="checkbox"> Dim Display while Connected
                       </label>
                     </div>
                   </div>
                 </div>
+
               </form>
             </div>
             <div class="modal-footer">
