--- a/public/app/screen.html
+++ b/public/app/screen.html
@@ -243,7 +243,7 @@
 
                   <div class="checkbox">
                     <label>
-                      <input id='reset-display-settings' type="checkbox"> Reset Display Settings on Exit
+                      <input id='dim-display' type="checkbox"> Dim Display while Connected
                     </label>
                   </div>
                 </div>
