--- a/public/app/list.html
+++ b/public/app/list.html
@@ -16,6 +16,8 @@
     <script src='device-settings.js' type="text/javascript"></script>
     <script src='farm-access.js' type="text/javascript"></script>
     <script src='util.js' type="text/javascript"></script>
+    <script src='socket/socket.js' type='text/javascript'></script>
+    <script src='adb/adb-client.js' type='text/javascript'></script>
     <script src='modal.js' type="text/javascript"></script>
     <script src='list.js' type="text/javascript"></script>
 
@@ -210,16 +212,26 @@
               <input type="checkbox" name="share-all" value="1" id='share-all-check'>
             </div>
           </div>
-          <div id='connect-automatically' class='form-group'>
-            <label class='col-sm-4 control-label'>Start automatically</label>
-            <div class='col-sm-6 checkbox'>
-              <input type="checkbox" name="connect-automatically" value="1" id='connect-automatically-check'>
-            </div>
-          </div>
           <div class='form-group'>
             <label class='col-sm-4 control-label'>Customize Vysor</label>
             <div class='col-sm-6 checkbox'>
               <a id='customize-vysor'>Manage Key Bindings and Navigation Bar</a>
+            </div>
+          </div>
+          <div id='connect-automatically' class='form-group'>
+            <label class='col-sm-4 control-label'>Start automatically</label>
+            <div class='col-sm-6 checkbox'>
+              <select id='connect-automatically-select' class="form-control">
+                <option>
+                  Always
+                </option>
+                <option>
+                  Notification Prompt
+                </option>
+                <option>
+                  Never
+                </option>
+              </select>
             </div>
           </div>
         </form>
