--- a/public/download.html
+++ b/public/download.html
@@ -29,9 +29,14 @@
 		}
 		function installAndClose(platform) {
 			var back = getUrlVars()['return']
-			if (back)
+			var dl = 'https://vysornuts.clockworkmod.com/download/' + platform;
+			if (back && back.length) {
 				window.location = decodeURIComponent(back);
-			window.open('https://vysornuts.clockworkmod.com/download/' + platform);
+				window.open(dl);
+			}
+			else {
+				window.location = dl;
+			}
 		}
 		</script>
 	</head>
