--- a/public/app/list.html
+++ b/public/app/list.html
@@ -259,7 +259,7 @@
           Android not found? Make sure <a href='https://plus.google.com/110558071969009568835/posts/Bb2wMXVwsQ7' target='_blank'>Android USB Debugging is enabled</a>.
         </p>
         <p id='windows'>
-          Windows users need <a href='http://koush.com/post/universal-adb-driver' target='_blank'>ADB Drivers</a>.
+          Windows users need <a href='https://adb.clockworkmod.com' target='_blank'>ADB Drivers</a>.
         </p>
         <p id='vysor-share-server-status'></p>
         <p id='whitelist-count'><a href='#'></a></p>
