--- a/public/download.html
+++ b/public/download.html
@@ -13,6 +13,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link href="app/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link href="style.css" rel="stylesheet" type="text/css">
 
 		<script>
 		function getUrlVars()
@@ -41,7 +43,21 @@
 		</script>
 	</head>
 	<body id="top">
+		<div class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Vysor</a>
+        </div>
 
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="javascript:openDownload()">Download</a></li>
+            <li><a href="#pricing">Pricing</a></li>
+            <li><a href="https://plus.google.com/110558071969009568835/posts/JLuG3yqRdSH">Support</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
 		<!-- Header -->
 			<header id="header">
