--- a/public/index.html
+++ b/public/index.html
@@ -14,63 +14,9 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
     <meta name="google-site-verification" content="NMNRE8QlDFmRd0I0WIY4eVyfE7SohaXJxJ73oGc-8fo" />
-    <link href="app/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link rel="chrome-webstore-item"
-        href="https://chrome.google.com/webstore/detail/gidgenkbbabolejbgbpnhbimgjbffefm">
-            <style>
-    .wrapper.style2 .image {
-      box-shadow : none
-    }
-    .spotlight .image {
-      box-shadow : none
-    }
-    .blue-icon {
-      color: #4A98E5;
-    }
-    table tbody tr:nth-child(2n + 1) {
-        background-color: transparent;
-    }
-    table tbody td:nth-child(3) {
-        background-color: rgba(144, 144, 144, 0.075);
-    }
-    table tbody th:nth-child(3) {
-        background-color: rgba(144, 144, 144, 0.075);
-    }
-    table tbody td:nth-child(2), table tbody td:nth-child(3), table thead tr th:nth-child(2), table thead tr th:nth-child(3) {
-      text-align: center;
-    }
-
-
-    .navbar-inverse .navbar-brand {
-      color: white;
-    }
-
-    .navbar-inverse {
-      background-color: #4696e5;
-      border-color: #4696e5;
-    }
-
-    .navbar {
-      border-radius: initial;
-      margin-bottom: 0px;
-    }
-
-    .navbar a {
-      border-bottom: initial;
-    }
-
-    .navbar-inverse .navbar-nav>li>a {
-      color: white;
-    }
-
-    h1, h2, h3, h4, h5, h6 {
-      color: #828282;
-    }
-
-    body {
-      color: #999999;
-    }
-    </style>
+		<link href="app/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/gidgenkbbabolejbgbpnhbimgjbffefm">
+		<link href="style.css" rel="stylesheet" type="text/css">
 
 		<script src='/install.js'></script>
 	</head>
