--- a/public/download.html
+++ b/public/download.html
@@ -63,7 +63,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">Download Vysor</a></h1>
+					<h1>Download Vysor</h1>
 					<ul class="actions">
 						<li><a id='windows' href="javascript:installAndClose('win32')" class="button icon fa-windows">Windows</a></li>
 						<li><a id='mac' href="javascript:installAndClose('osx')" class="button icon fa-apple">Mac</a></li>
