--- a/public/download/index.html
+++ b/public/download/index.html
@@ -10,11 +10,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="/assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<link href="app/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-		<link href="style.css" rel="stylesheet" type="text/css">
+		<link href="/app/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link href="/style.css" rel="stylesheet" type="text/css">
 		<link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/gidgenkbbabolejbgbpnhbimgjbffefm">
 
 		<script>
@@ -71,7 +71,7 @@
 						<li><a id=-'chrome' href="javascript:tryInlineInstall()" class="button icon fa-chrome">Chrome</a></li>
 					</ul>
 				</div>
-				<div class="image phone"><div class="inner"><img src="images/screen.png" alt="" /></div></div>
+				<div class="image phone"><div class="inner"><img src="/images/screen.png" alt="" /></div></div>
 			</header>
 
 		<!-- Footer -->
@@ -85,12 +85,12 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
+			<script src="/assets/js/jquery.min.js"></script>
+			<script src="/assets/js/jquery.scrolly.min.js"></script>
+			<script src="/assets/js/skel.min.js"></script>
+			<script src="/assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<script src="/assets/js/main.js"></script>
 			<script src='/install.js'></script>
 
       <script>
