--- a/public/app/list.html
+++ b/public/app/list.html
@@ -265,6 +265,13 @@
         <p id='whitelist-count'><a href='#'></a></p>
         <p id='adb-server-status'></p>
         <p id='vysor-version'></p>
+        <div id='login-info'>
+          <p>
+            <span id='login-email'></span>
+            <span> - </span>
+            <a id='account-management' target='_blank'></a>
+          </p>
+        </div>
         <div id='desktop-app'><p><a href='https://plus.google.com/110558071969009568835/posts/Ub7QKu2Pddu' target='_blank'>Get the standalone Vysor desktop app for better performance!</a></p></div>
       </div>
       <div class='this-pads-the-footer-so-it-scrolls' style='min-height: 50px'></div>
