--- a/public/app/list.html
+++ b/public/app/list.html
@@ -215,7 +215,7 @@
           <div class='form-group'>
             <label class='col-sm-4 control-label'>Customize Vysor</label>
             <div class='col-sm-6 checkbox'>
-              <a id='customize-vysor'>Manage Key Bindings and Navigation Bar</a>
+              <a id='customize-vysor'>Manage Key Bindings and Buttons</a>
             </div>
           </div>
           <div id='connect-automatically' class='form-group'>
