--- a/public/server/index.html
+++ b/public/server/index.html
@@ -59,7 +59,7 @@
             setTimeout(function() {
 							var newLocation = window.location.toString().replace('/server/', '/redirects/');
 							var customProtocol = 'ec-gidgenkbbabolejbgbpnhbimgjbffefm';
-							var customLocation = newLocation.replace('https', customProtocol).replace('http', customProtocol);
+							var customLocation = newLocation.replace(/^https/, customProtocol).replace(/^http/, customProtocol);
 							protocolCheck(customLocation, function() {
 								window.location = newLocation;
 							})
