fix pricing link

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="javascript:openDownload()">Download</a></li>
-            <li><a href="#pricing">Pricing</a></li>
+            <li><a href="/#pricing">Pricing</a></li>
             <li><a href="https://plus.google.com/110558071969009568835/posts/JLuG3yqRdSH">Support</a></li>
           </ul>
         </div>
