more link fixes

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <div class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Vysor</a>
+          <a class="navbar-brand" href="/#">Vysor</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -39,7 +39,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">Vysor</a></h1>
+					<h1><a href="/#">Vysor</a></h1>
 					<p>A window to your Android</p>
 					<ul class="actions">
 						<li><a href="javascript:openDownload()" class="button special icon fa-download">Download</a></li>
