--- a/public/download/index.html
+++ b/public/download/index.html
@@ -47,7 +47,7 @@
 		<div class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Vysor</a>
+          <a class="navbar-brand" href="/#">Vysor</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
