--- a/public/app/screen.html
+++ b/public/app/screen.html
@@ -234,7 +234,7 @@
                 </div>
               </div>
 
-              <div id='display-settings-container'>
+              <div id='display-settings-container' class='hidden'>
                 <label>Display Settings</label>
                 <div class='well'>
                   <label>Size and Density</label>
